Fix issue with whitespaces in platform path
The DefaultScript was not being loaded since whitespaces are considered
invalid characters for URIs.

Signed-off-by: Squareys <Squareys@googlemail.com>